--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Jalur Mandiri"
 APP_ENV=local
 APP_KEY=base64:VBBeDbxLq18T11s9JSxLqHFmf16WB8ajeC3d3Hgti/U=
 APP_DEBUG=true
